--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
         </div>
     <h1>Các dịch vụ mà chúng tôi có </h1>
         <h2><b>1. Tăng follow facebook</b></h2>
-            <img src="./remondlike/ảnh/Tăng follow fb-1.jpg" width="60%">
+            <img src="./ảnh/Tăng follow fb-1.jpg" width="60%">
         <h2><b>2. Tăng lượt xem bài viết fb , instagram và tiktok </b></h2>
-            <img src="./remondlike/ảnh/tăng view.jpg" width="60%">
+            <img src="./ảnh/tăng view.jpg" width="60%">
         <h2><b>3. Tăng lượt xem story </b></h2>        
-            <img src="./remondlike/ảnh/tăng người xem story.jpg" width="60%">
+            <img src="./ảnh/tăng người xem story.jpg" width="60%">
         <h2><b>4. Tăng follow instagram </b></h2>
-            <img src="./remondlike/ảnh/tăng follow ins.jpg" width="60%">
+            <img src="./ảnh/tăng follow ins.jpg" width="60%">
         <h2><b>5. Tăng like instagram </b></h2>
-            <img src="./remondlike/ảnh/tăng like instafram.jpg" width="60%">
+            <img src="./ảnh/tăng like instafram.jpg" width="60%">
         <h2><b>6. Tăng follow tiktok </b></h2>
-            <img src="./remondlike/ảnh/tăng fl tiktok.jpg" width="60%">
+            <img src="./ảnh/tăng fl tiktok.jpg" width="60%">
         <h2><b>7. Tăng like tiktok </b></h2>
-            <img src="./remondlike/ảnh/like tiktok.jpg" width="60%">
+            <img src="./ảnh/like tiktok.jpg" width="60%">
     </div>
     <div class="card">
         <h1>Thanh toán bằng thẻ nạp</h1>
-        <img src="./remondlike/ảnh/bảng giá khi thanh toán bằng thẻ.jpg" width="80%" >
+        <img src="./ảnh/bảng giá khi thanh toán bằng thẻ.jpg" width="80%" >
         <p>Nếu không hiện ảnh vui lòng truy cập đường link fb ở trên để được tư vấn rõ hơn</p>
     </div>
 </body>
