--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <div class="box1">
             <h1>WELCOME TO RYMONDLIKE</h1>
         </div>
-        <div style="font-size: 16px; display: flex;">
-            <div class="box2"><h3>Dịch vụ </h3></div>
-            <div class="box3"><h3>Hỗ trợ </h3></div>
-            <div class="box4"><h3>Đăng nhập</h3></div>
+        <div class="menu" >
+            <button class="btn box2">Dịch vụ </button>
+            <button class="btn box3">Hỗ trợ </button>
+            <button class="btn btn-login box4">Đăng nhập</button>
         </div>
     </div>
     <div class="header"></div>
